# wikidata-rdf-patch

./: .gitignore  README.md  pyproject.toml  rdf_patch.py  requirements.txt  test_rdf_patch.py
.github/: dependabot.yml
.github/workflows/: lint.yml  merge.yml  release.yml  test.yml
tests/: test_mediawiki_api.py  test_rdf_patch.py
wikidata_rdf_patch/: actions_logging.py  cli.py  mediawiki_api.py  rdf_patch.py  rdflib.py  wikidata_typing.py  wikimedia_api.py
