[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wikidata-rdf-patch"
version = "0.1.2"
description = "Edit Wikidata items with RDF"
readme = "README.md"
authors = [{ name = "Joshua Peek" }]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0,<9.0",
    "rdflib>=7.0.0,<8.0",
    "tqdm>=4.60.0,<5.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.scripts]
wikidata-rdf-patch = "wikidata_rdf_patch.cli:main"

[dependency-groups]
dev = [
    "build>=1.2.0",
    "mypy>=1.0.0,<2.0",
    "pytest>=8.0.0,<9.0",
    "ruff>=0.4.0",
    "types-tqdm>=4.60.0,<5.0",
]

[tool.ruff.lint]
extend-select = ["I", "UP"]

[tool.mypy]
strict = true
