[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=61", "wheel" ]

[project]
name = "wikidata-rdf-patch"
version = "0.1.2"
description = "Edit Wikidata items with RDF"
readme = "README.md"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [ { name = "Joshua Peek" } ]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "click>=8,<9",
    "rdflib>=7,<8",
    "tqdm>=4.60,<5",
]
scripts.wikidata-rdf-patch = "wikidata_rdf_patch.cli:main"

[dependency-groups]
dev = [
    "build>=1.2",
    "mypy>=1,<2",
    "pytest>=8,<9",
    "ruff>=0.4",
    "types-tqdm>=4.60,<5",
]

[tool.ruff]
lint.extend-select = [ "I", "UP" ]

[tool.pyproject-fmt]
indent = 4

[tool.mypy]
strict = true
